# sto-sim

./: CMakeLists.txt  CMakePresets.json  README.md  benchmarking.cpp  main.cpp  unit_tests.cpp
src/: stosim.cpp  stosim.hpp
src/stosim/: stosim.cpp  stosim.hpp
src/vessels/: vessels.cpp  vessels.hpp
